Stabilize MVC stack and Supabase image flow
Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>